fixed table property layout on mobile

--- a/grav/user/themes/haywire/sass/components/_property-list.sass
+++ b/grav/user/themes/haywire/sass/components/_property-list.sass
@@ -1,3 +1,15 @@
 .property-list-container
     min-height: 100vh
     padding-bottom: 3em
+.property-list-table-container
+    table.table
+        border-collapse: collapse
+        overflow-x: auto
+        display: block
+        width: fit-content
+        max-width: 100%
+        td,th
+            @include break-max($tablet)
+                font-size: 12px
+                line-height: 16px
+                padding: 10px
