--- a/grav/user/themes/haywire/sass/partials/_filter.sass
+++ b/grav/user/themes/haywire/sass/partials/_filter.sass
@@ -8,6 +8,9 @@
         margin-top: 0
         margin-right: 0
         margin-bottom: 0
+    .is-filter-button-group
+        @include break-max($widescreen)
+            display: none
     .button
         width: 330px
         @include break-max($tablet)
